# WorkoutTracker

./: .env.example  .gitignore  README.md  credentials.example.json  dashboard.py  launch.sh  pyproject.toml  test.ipynb
config/: exercises.json  muscle_diagrams.json  muscles.json
workout/: config.py  gdrive.py  parser.py  plots.py  storage.py  ui.py
workout/views/: adherence.py  body.py  exercise.py  muscles.py  overview.py  progress.py
